docs(ui-ux): enhance typography, api playground, decision flowcharts, and faq overhaul
- Configure Google Fonts Inter (body) and JetBrains Mono (code with ligatures) in mkdocs.yml and extra.css
- Implement interactive OpenAPI 3.1 Scalar playground (docs/scalar-playground.html and docs/api-reference/playground.md)
- Add interactive memory tier and pathway decision tree flowchart and comparison matrix in docs/memory/index.md
- Add code block titles and syntax highlighting across quickstart and SDK guides
- Wrap dense mathematical formulations in collapsible progressive disclosure notes in scoring pipeline and dreaming docs
- Add HTTP method badges and latency chips to REST API reference and stylesheets
- Comprehensively overhaul docs/faq.md across 8 categories grounded in MF-001 recall algebra, Panama FFM kernel, and LoCoMo/LongMemEval/MindSpan benchmarks

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>